# EBM_tilting

./: .gitignore  README.md  pyproject.toml
ebm_tilting/: integration.py  interpolation.py  model.py  types.py  unet.py  utils.py
ebm_tilting/scripts/: compute_mnist_mean.py  interpolate.py  sample.py  sample_finetune.py  train.py  train_finetune.py
